[package]
name = "barista-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark harness and schemas for Barista."
publish = false

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[dev-dependencies]
jsonschema = { version = "0.46", default-features = false }
tempfile = "3"

[lints]
workspace = true
