[package]
name = "barista-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark harness and schemas for Barista."
publish = false

[lib]

[[bin]]
name = "barista-bench"
path = "src/bin/barista-bench.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
jsonschema = { version = "0.46", default-features = false }
tempfile = "3"

[lints]
workspace = true
