[package]
name = "barista-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark harness and schemas for Barista."
publish = false

[lib]

[[bin]]
name = "barista-bench"
path = "src/bin/barista-bench.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }

# `--capture` mode dependencies. Kept optional so the bench harness
# still builds + tests cleanly on a host without mitmproxy installed;
# enable with `--features capture` for the network-measurement path.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time", "fs", "io-util", "net"], optional = true }
barista-netcap = { path = "../barista-netcap", optional = true }
barista-netanalyze = { path = "../barista-netanalyze", optional = true }

[features]
default = ["capture"]
capture = ["dep:tokio", "dep:barista-netcap", "dep:barista-netanalyze"]

[dev-dependencies]
jsonschema = { version = "0.46", default-features = false }
tempfile = "3"

[lints]
workspace = true
