[package]
name = "barista-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressed local artifact cache and metadata index."
publish = false

[lib]

[dependencies]
async-trait = "0.1"
barista-config = { path = "../barista-config" }
barista-coords = { path = "../barista-coords" }
barista-pom = { path = "../barista-pom" }
barista-resolver = { path = "../barista-resolver" }
barista-roastery-client = { path = "../barista-roastery-client" }
bincode = { version = "2", features = ["serde"] }
quick-xml = "0.40"
bytes = "1"
crc32fast = "1"
fd-lock = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync", "fs", "macros", "rt", "rt-multi-thread", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["sync", "fs", "macros", "rt", "rt-multi-thread", "time", "io-util", "net"] }
wiremock = "=0.6.2"
roastery = { path = "../../roastery" }
axum = "0.8"
serde_json = "1"

[lints]
workspace = true
