[package]
name = "barista-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The barista CLI binary."
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "barista"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
barista-config = { path = "../barista-config" }
barista-pom = { path = "../barista-pom" }
barista-resolver = { path = "../barista-resolver" }
barista-cache = { path = "../barista-cache" }
barista-lockfile = { path = "../barista-lockfile" }
barista-coords = { path = "../barista-coords" }

[dev-dependencies]
insta = "1.47"
jsonschema = { version = "0.46", default-features = false }
tempfile = "3"
toml = "0.8"

[lints]
workspace = true
