[package]
name = "barista-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The barista CLI binary."
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "barista"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `sha2` is used by `cmd::shot` (M4.3 T3) to derive a stable per-
# project key for the warm-path cache file under `~/.barista/cache`.
# Same major already pulled in by `barista-lockfile` / `barista-
# cache`, so this doesn't widen the dep graph.
sha2 = "0.10"
toml = "0.8"
# `which` locates `mvn` on the user's `$PATH` for the `--no-daemon`
# escape hatch, which forks an upstream Maven process instead of
# dispatching to the barback daemon. Same major as elsewhere in the
# workspace (netcap, xtask); already pulled transitively via
# reqwest.
which = "8"
barista-config = { path = "../barista-config" }
barista-pom = { path = "../barista-pom" }
barista-resolver = { path = "../barista-resolver" }
barista-cache = { path = "../barista-cache" }
barista-lockfile = { path = "../barista-lockfile" }
barista-coords = { path = "../barista-coords" }
# `barista-ipc` carries the wire types + Multiplexer used by
# `barista verify` (M4.3 T1) to dispatch ActionRequest envelopes to
# the barback daemon and collect ActionResult envelopes back. The
# `BAR-DAEMON-CRASHED` wire-error contract (M4.2 T6) is exposed via
# `barista_ipc::mux::DAEMON_CRASHED_CODE`; verify honours it via the
# auto-respawn path in `cmd::daemon`.
barista-ipc = { path = "../barista-ipc" }
# Minimal tokio runtime to drive the async IPC `Multiplexer`. The
# verify command spawns a current-thread runtime around the IPC
# dispatch so the rest of the CLI stays synchronous; `rt` + `net`
# + `io-util` + `macros` + `sync` + `time` are the features mux +
# UDS transport depend on (mirrors `barista-ipc`'s own feature set).
# `time` is also used by the auto-respawn ready-poll loop.
tokio = { version = "1", features = ["rt", "io-util", "net", "macros", "sync", "time"] }

[dev-dependencies]
insta = "1.47"
jsonschema = { version = "0.46", default-features = false }
tempfile = "3"
toml = "0.8"

[lints]
workspace = true
