[package]
name = "barista-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layered configuration loader (defaults, files, env, flags)."
publish = false

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
quick-xml = "0.40"

[dev-dependencies]
tempfile = "3"
barista-test-fixtures = { path = "../barista-test-fixtures" }

[[example]]
name = "survey-extensions"
path = "examples/survey-extensions.rs"
