[package]
name = "barista-coords"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Maven artifact coordinates (group:artifact:version, GATC, GATCV)."
publish = false

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
