[package]
name = "barista-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Worker-protocol IPC transport between the CLI and the barback daemon."
publish = false

[lib]

[dependencies]
# `prost` carries the runtime traits (`Message`, `Enumeration`, oneof helpers)
# the generated bindings rely on. Pinned to the 0.13 minor — the schema is
# small and stable, and 0.13 is the current long-supported line.
#
# Deliberately NOT `tonic`: PRD §12 specifies a hand-rolled, length-prefix
# framed transport over UDS / named pipes (M4.1 T4). `tonic` is gRPC over
# HTTP/2 — its framing, multiplexing, and HTTP semantics are wasted overhead
# for a single-host, owner-only socket, and pulling it in would force a
# tokio + hyper dep tree we don't need on the CLI hot path.
prost = "0.13"

# `zeroize` lets us mark credential-bearing types with `ZeroizeOnDrop` so
# decrypted secrets are wiped from memory when the message is dropped. The
# hand-rolled `Debug` impls in `src/proto.rs` are the user-visible half of
# the redacted-secrets story; the `ZeroizeOnDrop` derive is the in-memory
# half. M4.1 T5 (filesystem-permission auth) extends this end-to-end with
# transport-buffer zeroization.
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# Async runtime + UDS (Unix) / named-pipe (Windows) transports for the
# framed wire protocol in `src/transport/`. tokio's named-pipe surface is
# Windows-only; the rest is cross-platform. We avoid the `process` feature
# (not needed on the IPC hot path) and `signal` (the CLI owns signal
# handling). `sync` enables `oneshot` / `mpsc` for the per-stream channels
# T6 will wire on top of this transport.
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros", "sync"] }

# `tokio-util::codec::LengthDelimitedCodec` already implements the exact
# 4-byte big-endian length-prefix framing PRD §12.1 specifies. Reusing it
# avoids a hand-rolled `AsyncRead`/`AsyncWrite` framer (and the subtle
# torn-write / partial-frame bugs that live in such code). Configured in
# `src/transport/mod.rs` with `length_field_length(4)`, big-endian by
# default, and a 16 MiB max-frame guardrail (see `MAX_FRAME_BYTES`).
tokio-util = { version = "0.7", features = ["codec"] }

# `bytes` is `tokio-util`'s buffer currency — `LengthDelimitedCodec`
# yields `BytesMut` frames on read and accepts `Bytes` on write. Adding
# it explicitly (rather than re-exporting via `tokio-util`) keeps the
# public types in `src/transport/` self-documenting.
bytes = "1"

# `thiserror` is used by the rest of the workspace for typed error
# enums; matching the style for `TransportError`. Pinned to the same
# major as `barista-cache`, `barista-cli`, etc.
thiserror = "2"

# `futures-util` is needed for the `SinkExt::send` and
# `StreamExt::next` adapters on `tokio_util::codec::Framed` — the
# adapter methods live in `futures-util` even though the underlying
# traits are in `futures-core` / `futures-sink`. Only the `sink` +
# `std` features are needed (we don't pull executors, channels, or
# the macro half of the crate).
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[build-dependencies]
# `prost-build` invokes `protoc` at compile time and turns the `.proto`
# files in `proto/` into Rust types under `OUT_DIR`. Version locked to the
# same minor as the `prost` runtime dep to keep generated-code / runtime
# trait surfaces in sync.
#
# `cleanup-markdown` runs proto comments through `pulldown-cmark` so the
# generated Rust doc-comments don't break `cargo test` (proto comments use
# `*` bullets + backticked tokens that rustdoc would otherwise try to
# parse as indented code blocks, producing spurious lex errors).
prost-build = { version = "0.13", features = ["cleanup-markdown"] }

[dev-dependencies]
# `tempfile` provides a per-test tmpdir so concurrent UDS tests don't
# collide on socket paths. macOS' 104-char `sun_path` limit means we
# can't blindly use `std::env::temp_dir()` — `tempdir()` returns a
# short, unique path the test cleans up on drop.
tempfile = "3"

# Tests use `tokio::time::sleep` to break up writes and prove the
# codec resumes correctly across stalled writes. The `time` feature
# isn't required by the production transport (the codec yields based
# on socket readiness, not wall-clock timers), so we keep it confined
# to dev-deps.
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros", "sync", "time"] }

[lints]
workspace = true
