[package]
name = "barista-lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "barista.lock parser, serializer, and diff renderer."
publish = false

[lib]

[dependencies]
barista-pom = { path = "../barista-pom" }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
insta = "1.47"
tempfile = "3"
