[package]
name = "barista-lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "barista.lock parser, serializer, and diff renderer."
publish = false

[lib]

[dependencies]
barista-pom = { path = "../barista-pom" }
bincode = { version = "2.0", features = ["serde"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
toml = "1.1"

[dev-dependencies]
insta = "1.47"
tempfile = "3"

[[example]]
name = "export-schema"
path = "examples/export-schema.rs"

[lints]
workspace = true
