[package]
name = "barista-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parallel dependency resolver (BFS+Skipper) for Maven artifacts."
publish = false

[lib]

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
barista-coords = { path = "../barista-coords" }
barista-pom = { path = "../barista-pom" }
barista-version = { path = "../barista-version" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
