[package]
name = "barista-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parallel dependency resolver (BFS+Skipper) for Maven artifacts."
publish = false

[lib]

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
quick-xml = "0.40"
serde = { version = "1", features = ["derive"] }
pubgrub = "0.3"
tokio = { version = "1", features = ["rt"] }
barista-config = { path = "../barista-config" }
barista-coords = { path = "../barista-coords" }
barista-pom = { path = "../barista-pom" }
barista-version = { path = "../barista-version" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
criterion = { version = "0.8", default-features = false, features = ["plotters", "cargo_bench_support"] }
barista-test-fixtures = { path = "../barista-test-fixtures" }

[[bench]]
name = "walker"
harness = false
