[package]
name = "barista-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Opt-in telemetry transport for Barista (off by default)."
publish = false

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
barista-config = { path = "../barista-config" }
serde_json = "1"
toml = "0.8"
